# FeedMePapers

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  config.yaml  docker-compose.yml  install.sh  llm_processor.py  main.py  notion_publisher.py  pyproject.toml  requirements.txt  searcher.py
src/feedmepapers/: cli.py  config.py  models.py
src/feedmepapers/llm/: __init__.py  processor.py
src/feedmepapers/notion/: __init__.py  publisher.py
src/feedmepapers/search/: __init__.py  searcher.py
