[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feedmepapers"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "notion-client>=2.0.0",
    "python-dotenv>=1.0.0",
    "ollama>=0.4.0",
    "httpx>=0.27.0",
]

[project.scripts]
feedmepapers = "feedmepapers.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/feedmepapers"]
